[package]
name = "theseus-mlua-sys"
version = "0.8.4"
authors = ["Aleksandr Orlenko <zxteam@pm.me>", "JohnTheCoolingFan <ivan8215145640@gmail.com>", "Smakosz Jan <margos.michal@gmail.com>"]
edition = "2021"
repository = "https://github.com/JohnTheCoolingFan/factorio-mlua"
documentation = "https://docs.rs/factorio-mlua-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
license = "MIT"
links = "lua"
build = "build/main.rs"
description = """
Low level (FFI) bindings to Lua 5.4/5.3/5.2/5.1 (including LuaJIT), Factorio Lua and Roblox Luau
"""

[package.metadata.docs.rs]
features = ["lua-factorio", "vendored"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
lua54 = []
lua53 = []
lua52 = []
lua51 = []
lua-factorio = ["vendored", "link-cplusplus"]
luajit = []
luajit52 = ["luajit"]
luau = ["luau0-src"]
luau-codegen = ["luau"]
luau-vector4 = ["luau"]
external = []
vendored = ["theseus-lua-src", "luajit-src"]
module = []

[dependencies]
link-cplusplus = { version = "1.0", optional = true}

[build-dependencies]
cc = "1.0"
cfg-if = "1.0"
pkg-config = "0.3.17"
lua-src = { version = ">= 548.1.0, < 548.2.0", optional = true }
luajit-src = { version = ">= 210.6.0, < 210.7.0", optional = true }
luau0-src = { version = "0.15.6", optional = true }
theseus-lua-src = { version = ">= 544.0.0, < 550.0.0", optional = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(raw_dylib)'] }
